--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,4 +9,4 @@ jobs:
     # операционная система для работы воркфлоу
     runs-on: ubuntu-latest
     steps: # список шагов, которые надо выполнить
-    	 echo:  make say-hello
+    	 - run: echo "make say-hello"
